--- a/index.html
+++ b/index.html
@@ -4,7 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Estilos/bootstrap.min.css">
+
 </head>
 <body>
+   <nav class="navbar navbar-light bg-light">
+    <a href="/" class="navbar-brand">
+        Product APP
+    </a>
+   </nav>
+
+   <div class="container">
+    <div id="app" class="row pt-5">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-header">
+                    <h4>Add a Product</h4>
+                </div>
+                <form id="product.form" class="card-body">
+                    <div class="form-group">
+                        <label>Product Name</label>
+                        <input type="text" id="name" placeholder="Name" class="form-control">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Product cost per piece</label>
+                        <input type="text" id="price" step="0.01" placeholder="Price"  class="form-control">
+                    </div>
+
+                    <div class="form-group">
+                        <label> Product Quantity</label>
+                        <input type="text" id="quantity" placeholder="Quantity" class="form-control">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Product date</label>
+                        <input type="text" id="date" placeholder="" class="form-control">
+                    </div>
+                    
+                    <input type="button" value="Save" class="btn btn-primary btn-block">
+                </form>
+            </div>
+        </div>
+        <div id="product-list" class="col-md-8"></div>
+    </div>
+   </div>
+   <script> src="scrip.JS"</script>
 </body>
 </html>
