--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="card-header">
                     <h4>Add a Product</h4>
                 </div>
-                <form id="product.form" class="card-body">
+                <form id="product-form" class="card-body">
                     <div class="form-group">
                         <label>Product Name</label>
                         <input type="text" id="name" placeholder="Name" class="form-control">
@@ -42,13 +42,14 @@
                         <input type="text" id="date" placeholder="" class="form-control">
                     </div>
                     
-                    <input type="button" value="Save" class="btn btn-primary btn-block">
+                    <input type="submit" value="Save" class="btn btn-primary btn-block">
                 </form>
             </div>
         </div>
         <div id="product-list" class="col-md-8"></div>
     </div>
    </div>
-   <script> src="scrip.JS"</script>
+
+   <script src="script.JS"></script>
 </body>
 </html>
